--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,12 @@ readme = "README.md"
 python = "^3.11"
 jupyter-book = "^1.0.3"
 ghp-import = "^2.1.0"
+ipykernel = "^6.29.5"
+pandas = "^2.2.3"
+polars = "^1.21.0"
+altair = "^5.5.0"
+plotly = "^6.0.0"
+vega-datasets = "^0.9.0"
 
 
 [build-system]
